--- a/index.html
+++ b/index.html
@@ -600,7 +600,118 @@
       </div>
       <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
     </div>
-
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
+    <div class="notif">
+      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="text">
+        <h1>Medo says Hi</h1>
+        <span>1 day ago</span>
+      </div>
+      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+    </div>
   </div>
   </div>
   <div class="landing">
