--- a/index.html
+++ b/index.html
@@ -598,119 +598,7 @@
         <h1>Medo says Hi</h1>
         <span>1 day ago</span>
       </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
-    </div>
-    <div class="notif">
-      <div class="user-img"><img src="/imgs/kaska.jpg" alt=""></div>
-      <div class="text">
-        <h1>Medo says Hi</h1>
-        <span>1 day ago</span>
-      </div>
-      <div class="vid-img"><img src="/imgs/kaska.jpg" alt=""></div>
+      <div class="vid-img"></div>
     </div>
   </div>
   </div>
