--- a/shorts.html
+++ b/shorts.html
@@ -16,7 +16,7 @@
     <title>YouTube</title>
   </head>
 
-  <body style="overflow: hidden">
+  <body>
     <!-- Start Heading -->
     <nav styl class="shorts-nav">
       <div class="m-search-container">
