--- a/shorts.html
+++ b/shorts.html
@@ -1212,7 +1212,7 @@
               value="0"
               min="0"
               type="range"
-              step="1"
+              step="0.1"
             />
             <div style="display: none;" class="seek-tooltip" id="seek-tooltip">00:00</div>
           </div>
@@ -1410,7 +1410,7 @@
           </div>
         </div>
         <div class="vids">
-          <video autoplay src="/vids/walter-s-transformation.mp4"></video>
+          <video autoplay src="/vids/jesse-s-transformation.mp4"></video>
           <span></span>
           <div class="ineract">
             <div class="like">
@@ -1484,7 +1484,7 @@
           </div>
           <div class="channel">
             <div class="text">
-              <p>WalterWhite Transofmation</p>
+              <p>Jesse Transofmation</p>
             </div>
             <div class="img">
               <img src="/imgs/kaska.jpg" alt="">
@@ -1505,7 +1505,7 @@
           </div>
         </div>
         <div class="vids">
-          <video class="" src="/vids//GtaV.mp4"></video>
+          <video class="" src="/vids/dragon-entry-in-game-of-thrones.mp4"></video>
           <span></span>
           <div class="ineract">
             <div class="like">
@@ -1579,7 +1579,7 @@
           </div>
           <div class="channel">
             <div class="text">
-              <p>GtaV Franklin</p>
+              <p>Dragon Entry In Game Of Thrones</p>
             </div>
             <div class="img">
               <img src="/imgs/kaska.jpg" alt="">
@@ -1600,7 +1600,7 @@
           </div>
         </div>
         <div class="vids">
-          <video class="jon" src="/vids//Game of thrones _ Edit _ .mp4"></video>
+          <video class="jon" src="/vids/Aot.mp4"></video>
           <span></span>
           <div class="ineract">
             <div class="like">
@@ -1674,7 +1674,7 @@
           </div>
           <div class="channel">
             <div class="text">
-              <p>Got john Snow</p>
+              <p>Aot Erwin Speech</p>
             </div>
             <div class="img">
               <img src="/imgs/kaska.jpg" alt="">
