--- a/watch.html
+++ b/watch.html
@@ -20,10 +20,18 @@
     <link rel="icon" type="image/x-icon" href="imgs/yt-logo.png" />
     <title>YouTube</title>
   </head>
-  <body>
+  <body class="waiting watch">
     <div class="web-page">
       <div class="full-screen-holder"></div>
       <div class="landing">
+        <div class="waiting-load">
+          <div class="loading">
+            <svg class="container" viewBox="0 0 40 40" height="40" width="40">
+              <circle class="track" cx="20" cy="20" r="17.5" pathLength="100" stroke-width="5px" fill="none"></circle>
+              <circle class="car" cx="20" cy="20" r="17.5" pathLength="100" stroke-width="5px" fill="none"></circle>
+            </svg>
+          </div>
+        </div>
         <div class="Wleft">
           <div class="videoCont">
             <div class="ambient-effect">
@@ -1244,3 +1252,4 @@
     <script src="js/home.js"></script>
   </body>
 </html>
+
